# FizzBuzz

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
src/fizzbuzz/: __init__.py  __main__.py
tests/: test_FizzBuzz.py
